Project Url no longer clicked on Mobile Device when Project Card is touched

--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -26,10 +26,15 @@
 
 .project-card:hover .project-overlay {
   opacity: 1;
+  display: flex;
 }
 
 .project-card:hover .project-img {
   filter: blur(20px);
+}
+
+.project-card:hover .project-url {
+  animation: showBottomTop 300ms ease-in-out;
 }
 
 .project-img {
@@ -41,6 +46,7 @@
 }
 
 .project-overlay {
+  display: none;
   opacity: 0;
   padding: 20px;
   position: absolute;
@@ -50,20 +56,34 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.1);
 
-  display: flex;
   flex-direction: column;
 
   transition: opacity 300ms ease-in-out;
+
+  overflow-y: hidden;
 }
 
-.project-overlay button {
+.project-url {
   margin-top: auto;
   cursor: pointer;
+  position: relative;
 }
 
 @media (min-width: 1440px) {
   .project-card {
     width: 500px;
     height: 500px;
+  }
+}
+
+@keyframes showBottomTop {
+  from {
+    top: 100%;
+    opacity: 0;
+  }
+
+  to {
+    top: 0;
+    opacity: 1;
   }
 }
